--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "2"
+version: "3"
 services:
   influxdb:
     container_name: influxdb
@@ -6,16 +6,18 @@ services:
     ports:
       - "8086:8086"
     volumes:
-      - /tig/data/influxdb:/var/lib/influxdb
-      - /tig/conf/influxdb:/etc/influxdb/
+      - "${DATA_DIR}/data/influxdb:/var/lib/influxdb"
+      - "${CONF_DIR}/influxdb:/etc/influxdb/"
     restart: always
 
   telegraf:
     container_name: telegraf
     image: telegraf
     network_mode: "host"
+    depends_on: 
+      - influxdb
     volumes:
-      - /tig/conf/telegraf/telegraf.conf:/etc/telegraf/telegraf.conf
+      - "${CONF_DIR}/telegraf/telegraf.conf:/etc/telegraf/telegraf.conf"
       - /var/run/docker.sock:/var/run/docker.sock
     restart: always
     
@@ -26,9 +28,9 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - /tig/data/grafana:/var/lib/grafana
-      - /tig/log/grafana:/var/log/grafana
-      - /tig/conf/grafana/grafana.ini:/etc/grafana/grafana.ini
+      - "${DATA_DIR}/grafana:/var/lib/grafana"
+      - "${DATA_DIR}/log/grafana:/var/log/grafana"
+      - "${CONF_DIR}/grafana/grafana.ini:/etc/grafana/grafana.ini"
     links:
       - influxdb
     restart: always
@@ -41,7 +43,7 @@ services:
       - "1883:1883"
       - "9001:9001"
     volumes:
-      - /tig/conf/mqtt/:/mosquitto/config/
-      - /tig/data/mqtt/:/mosquitto/data/
-      - /tig/log/mqtt/:/mosquitto/log/
+      - "${CONF_DIR}/mqtt/:/mosquitto/config/"
+      - "${DATA_DIR}/mqtt/:/mosquitto/data/"
+      - "${DATA_DIR}/mqtt/:/mosquitto/log/"
     restart: always
